--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>{{ title }}</title>
 </head>
 <body>
+{% if e %}
+    <h1>{{ e }}</h1>
+{% else %}
+<h1>Квадратное уравнение a*x*x + b*x + c = 0</h1>
+{% endif %}
+    <ul>
+        <li> a = {{ a }}</li>
+
+        <li> b = {{ b }}</li>
+
+        <li> c = {{ c }}</li>
+
+    </ul>
+
+
+    {% if dscrt != None %}
+        <h3>Дискриминант: {{ dscrt }}</h3>
+        {% if dscrt > 0 %}
+            <h3>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</h3>
+        {% elif dscrt == 0 %}
+            <h3>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</h3>
+        {% elif dscrt < 0 %}
+            <h3>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</h3>
+        {% endif %}
+    {% endif %}
 
 </body>
 </html>
