--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
@@ -8,8 +9,8 @@
 
   <title>PyBursa Contacts</title><!-- Bootstrap -->
 
-  <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/bootstrap/css/style.css" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <link href="{% static 'bootstrap/css/style.css' %}" rel="stylesheet"><!-- Bootstrap -->
+  <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -23,18 +24,18 @@
       <div class="navbar-header">
         <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type=
         "button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class=
-        "icon-bar"></span></button> <a class="navbar-brand" href="/">PyBursa</a>
+        "icon-bar"></span></button> <a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
       </div><!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li>
-            <a href="/">Main</a>
+            <a href="{% url 'index' %}">Main</a>
           </li>
           <li class="active">
-            <a href="/contact/">Contacts</a>
+            <a href="{% url 'contact' %}">Contacts</a>
           </li>
           <li>
-            <a href="/student_list/">Students</a>
+            <a href="{% url 'student_list' %}">Students</a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -43,7 +44,7 @@
   <div class="container theme-showcase" role="main">
     <div class="jumbotron">
       <div class="container">
-        <div class="col-sm-3"><img class="photo" id="director" src="/static/images/dasha.jpg"></div>
+        <div class="col-sm-3"><img class="photo" id="director" src="{% static 'images/dasha.jpg' %}"></div>
         <div class="col-sm-9">
           <h2 class="zagolovok">Director</h2><strong>Name:</strong> <span class="name">Дария Михалевич</span><br>
           <strong>Skype:</strong> <span class="skype">darka.darka.darka.darka.</span><br>
@@ -52,7 +53,7 @@
           <br>
           <br>
         </div>
-        <div class="col-sm-3"><img class="photo" id="founder" src="/static/images/pasha.jpg"></div>
+        <div class="col-sm-3"><img class="photo" id="founder" src="{% static 'images/pasha.jpg' %}"></div>
         <div class="col-sm-9">
           <h2 class="zagolovok">Founder</h2><strong>Name:</strong> <span class="name">Павел Обод</span><br>
           <strong>Skype:</strong> <span class="skype">azaless</span><br>
@@ -61,7 +62,7 @@
           <br>
           <br>
         </div>
-        <div class="col-sm-3"><img class="photo" id="manager" src="/static/images/tanya.jpg"></div>
+        <div class="col-sm-3"><img class="photo" id="manager" src="{% static 'images/tanya.jpg' %}"></div>
         <div class="col-sm-9">
           <h2 class="zagolovok">Manager</h2><strong>Name:</strong> <span class="name">Татьяна Орехова</span><br>
           <strong>Skype:</strong> <span class="skype">Tatyana_Oriekhova</span><br>
@@ -78,8 +79,8 @@
   </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
   </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
-   
-  <script src="/static/bootstrap/js/bootstrap.js">
+
+  <script src="{% static 'bootstrap/js/bootstrap.js' %}">
   </script>
 </body>
 </html>
