--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
@@ -10,8 +11,8 @@
 
   <title>PyBursa Main</title>
 
-  <link href="/static/bootstrap/css/style.css" rel="stylesheet"><!-- Bootstrap -->
-  <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <link href="{% static 'bootstrap/css/style.css' %}" rel="stylesheet"><!-- Bootstrap -->
+  <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -28,18 +29,18 @@
       <div class="navbar-header">
         <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type=
         "button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class=
-        "icon-bar"></span></button> <a class="navbar-brand" href="/">PyBursa</a>
+        "icon-bar"></span></button> <a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
       </div><!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active">
-            <a href="/">Main</a>
+            <a href="{% url 'index' %}">Main</a>
           </li>
           <li>
-            <a href="/contact/">Contacts</a>
+            <a href="{% url 'contact' %}">Contacts</a>
           </li>
           <li>
-            <a href="/student_list/">Students</a>
+            <a href="{% url 'student_list' %}">Students</a>
           </li>
         </ul>
       </div>
@@ -55,7 +56,7 @@
         курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение
         приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые,
         но рабочие проекты.</p>
-        
+
         <h2 class="course">Program</h2>
         <div class="container">
           <div class="row">
@@ -95,8 +96,8 @@
 
   </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-  </script> <!-- Include all compiled plugins (below), or include individual files as needed -->   
-  <script src="/static/bootstrap/js/bootstrap.js">
+  </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="{% static 'bootstrap/js/bootstrap.js' %}">
   </script>
 </body>
 </html>
