--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
   <meta content="text/html; charset=utf-8" http-equiv="content-type">
@@ -6,8 +7,8 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>PyBursa Students</title><!-- Bootstrap -->
-  <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/bootstrap/css/style.css" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <link href="{% static 'bootstrap/css/style.css' %}" rel="stylesheet"><!-- Bootstrap -->
+  <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet"><!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,18 +22,18 @@
       <div class="navbar-header">
         <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type=
         "button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class=
-        "icon-bar"></span></button> <a class="navbar-brand" href="/">PyBursa</a>
+        "icon-bar"></span></button> <a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
       </div><!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li>
-            <a href="/">Main</a>
+            <a href="{% url 'index' %}">Main</a>
           </li>
           <li>
-            <a href="/contact/">Contacts</a>
+            <a href="{% url 'contact' %}">Contacts</a>
           </li>
           <li class="active">
-            <a href="/student_list/">Students</a>
+            <a href="{% url 'student_list' %}">Students</a>
           </li>
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -60,7 +61,7 @@
               <tbody>
                 <tr>
                   <td>
-                    <a class="table" href="/student_detail/">1</a>
+                    <a class="table" href="{% url 'student_detail' %}">1</a>
                   </td>
                   <td>Пупкин</td>
                   <td>Василий</td>
@@ -115,8 +116,8 @@
   </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
   </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
-   
-  <script src="/static/bootstrap/js/bootstrap.js">
+
+  <script src="{% static 'bootstrap/js/bootstrap.js' %}">
   </script>
 </body>
 </html>
