--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,1 +1,9 @@
 hello world!
+
+<form action="/your-name/?a=dasd" method="post">
+    <label for="your_name">Your name: </label>
+    <input id="your_name" type="text" name="your_name" value="{{ current_name }}">
+    <input type="submit" value="OK">
+</form>
+
+https://docs.djangoproject.com/en/1.8/topics/forms/
