--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contacts</title>
+	{% load staticfiles %}
 
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{%static 'css/bootstrap.css'%}" rel="stylesheet">
+    <link href="{%static 'css/style.css'%}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,9 +17,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="../static/js/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{%static 'js/jquery.min.js'%}"></script>
+    <script src="{%static 'js/bootstrap.min.js'%}"></script>
   </head>
   <body>
     <div class="slash-div">
@@ -33,25 +33,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="{% url 'contact'%}">Brand</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Main</a></li>
-        <li class="active"><a href="contact.html">Contacts</a></li>
-		<li><a href="student_list.html">Students</a></li>
+        <li><a href="{% url 'index'%}">Main</a></li>
+        <li class="active"><a href="{% url 'contact'%}">Contacts</a></li>
+		<li><a href="{% url 'student_list'%}">Students</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="{% url 'contact'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="{% url 'contact'%}">Action</a></li>
+            <li><a href="{% url 'contact'%}">Another action</a></li>
+            <li><a href="{% url 'contact'%}">Something else here</a></li>
             
-            <li><a href="#">Separated link</a></li>
+            <li><a href="{% url 'contact'%}">Separated link</a></li>
            
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="{% url 'contact'%}">One more separated link</a></li>
           </ul>
         </li>
       </ul>
@@ -62,14 +62,14 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="{% url 'contact'%}">Link</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="{% url 'contact'%}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="{% url 'contact'%}">Action</a></li>
+            <li><a href="{% url 'contact'%}">Another action</a></li>
+            <li><a href="{% url 'contact'%}">Something else here</a></li>
+            <li><a href="{% url 'contact'%}">Separated link</a></li>
           </ul>
         </li>
       </ul>
@@ -83,7 +83,7 @@
 
        <div class="media">
           <div class="media-left">
-            <a href="#">
+            <a href="{% url 'contact'%}">
               <img class="img-circle img-style" src="../static/images/director.jpg">
             </a>
           </div>
@@ -101,7 +101,7 @@
             </div></div>
         <div class="media">
           <div class="media-left">
-            <a href="#">
+            <a href="{% url 'contact'%}">
               <img class="img-circle img-style" src="../static/images/founder.jpg">
             </a>	
           </div>
@@ -113,7 +113,7 @@
             Phone:  +99006664646<br>
           </div>
           <div class="media-left">
-            <a href="#">
+            <a href="{% url 'contact'%}">
               <img class="img-circle img-style" src="../static/images/manager.jpg">
             </a>
           </div>
