--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Contacts</title>
     <!-- Bootstrap -->
-     {% load staticfiles %}
+    {% load staticfiles %}
 +   <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 +   <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <script src="{% static 'js/bootstrap.js' %}"></script>
@@ -30,8 +30,8 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="{% url 'index' %}">Main</a>
-      <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
-      <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
+        <a class="navbar-brand" href="{% url 'contact' %}">Contacts</a>
+        <a class="navbar-brand" href="{% url 'student_list' %}">Students</a>
       </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -49,9 +49,9 @@
        <div class="caption">
          <h3 class="d">Director</h3>
           <p class="d1">Name: Алексей Радченко<br>
-             skype: <br>
-             e-mail: <br>
-             phone:
+             Skype: <br>
+             E-mail: <br>
+             Phone:
           </p>
         </div>
       </div>
@@ -62,9 +62,9 @@
         <div class="caption">
           <h3 class="m">Manager</h3>
           <p class = "m1">Name: Дария Михалевич<br>
-             skype: darka.darka.darka.darka.<br>
-             e-mail: daria.mykhalevych@gmail.com<br>
-             phone:</p>
+             Skype: darka.darka.darka.darka.<br>
+             E-mail: daria.mykhalevych@gmail.com<br>
+             Phone:</p>
         </div>
       </div>
     </div>
@@ -75,9 +75,9 @@
         <div class="caption">
           <h3 class="f">Founder</h3>
           <p class= "f1">Name: Павел Обод<br>
-             skype: azaless<br>
-             e-mail: itbursa100@gmail.com<br>
-             phone:
+             Skype: azaless<br>
+             E-mail: itbursa100@gmail.com<br>
+             Phone:
           </p>
           </div>
         </div>
