--- a/templates/contact.html
+++ b/templates/contact.html
@@ -49,8 +49,8 @@
        <div class="caption">
          <h3 class="d">Director</h3>
           <p class="d1">Name: Алексей Радченко<br>
-             Skype: <br>
-             E-mail: <br>
+             Skype: <br />
+             Email: <br />
              Phone:
           </p>
         </div>
@@ -61,9 +61,9 @@
         <img class="imgm" src="{% static 'images/manadg.jpg' %}" alt="...">
         <div class="caption">
           <h3 class="m">Manager</h3>
-          <p class = "m1">Name: Дария Михалевич<br>
-             Skype: darka.darka.darka.darka.<br>
-             E-mail: daria.mykhalevych@gmail.com<br>
+          <p class = "m1">Name: Дария Михалевич<br />
+             Skype: darka.darka.darka.darka.<br />
+             Email: daria.mykhalevych@gmail.com<br />
              Phone:</p>
         </div>
       </div>
@@ -74,9 +74,9 @@
         <img class="imgf" src="{% static 'images/founder.jpg' %}" alt="...">
         <div class="caption">
           <h3 class="f">Founder</h3>
-          <p class= "f1">Name: Павел Обод<br>
-             Skype: azaless<br>
-             E-mail: itbursa100@gmail.com<br>
+          <p class= "f1">Name: Павел Обод<br />
+             Skype: azaless<br />
+             Email: itbursa100@gmail.com<br />
              Phone:
           </p>
           </div>
