--- a/templates/contact.html
+++ b/templates/contact.html
@@ -84,7 +84,7 @@
       <div class="thumbnail">
         <div class="row">
           <div class="col-sm-5 col-md-4">
-          <img class ="img-responsive" alt="photo" src=".{% static 'images/noimg.svg' %}"
+          <img class ="img-responsive" alt="photo" src="{% static 'images/noimg.svg' %}"
                 >
           </div>  
           
