--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -8,7 +8,7 @@
 	<li>c = {{ c }}</li>
 	<p>{{ mes_c }}</p>
 </ul>
-<div>{{ mes_discr }}</div>
+<div>{{ discriminant }}</div>
 <div>{{ message }} {{ roots }}</div>
 
 
