--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,9 @@
+{% load staticfiles %}
 <!DOCTYPE html>
+
 <html lang="en">
-  <head>
+    
+    <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,9 +11,9 @@
     <title>PyBursa - Contacts</title>
 
     <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/ico">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link rel="icon" href="{% static 'images/favicon.ico'%}" type="image/ico">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -24,15 +27,15 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <img id="brico" alt="Brand" src="../static/images/bicon.png"/>     
+          <img id="brico" alt="Brand" src="{% static 'images/bicon.png'%}"/>     
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts</a><span class="sr-only">(current)</span></li>
-             <li><a href="student_list.html">Students</a></li>
+            <li><a href="{% url 'index'%}">Main</a></li>
+            <li class="active"><a href="{% url 'contact' %}">Contacts</a><span class="sr-only">(current)</span></li>
+             <li><a href="{% url 'student_list'%}">Students</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -45,7 +48,7 @@
           <tr>
           <th class = "conth">
            <h2 class = "contact-header"> Director</h2>
-          <p class = "condata"><img class = "con-info" alt = "director" src ="../static/images/director.jpg"/></br>
+          <p class = "condata"><img class = "con-info" alt = "director" src ="{% static 'images/director.jpg' %}"/></br>
             Name: Nickolas Fury </br>
             Skype: nick_fury </br>
             Email: director@shield.ru </br>
@@ -53,7 +56,7 @@
           </p></th>
           <th class = "conth">
           <h2 class = "contact-header"> Manager</h2>
-          <p class = "condata"><img class = "con-info"alt = "manager" src ="../static/images/manager.jpg"/></br>
+          <p class = "condata"><img class = "con-info"alt = "manager" src ="{% static 'images/manager.jpg'%}"/></br>
           Name: Pepper Potts </br>
             Skype: ppots </br>
             Email: rescue@stark.com </br>
@@ -62,7 +65,7 @@
           
           <th class = "conth">
           <h2 class = "contact-header"> Founder</h2>
-          <p class = "condata"><img class = "con-info" alt = "founder" src ="../static/images/founder.jpg"/></br>
+          <p class = "condata"><img class = "con-info" alt = "founder" src ="{% static 'images/founder.jpg'%}"/></br>
           Name: Tony Stark </br>
             Skype: ironman14 </br>
             Email: iam@ironman.ru </br>
@@ -76,6 +79,6 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
