--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -62,9 +62,7 @@
           <li>b = {{b}}{% if b_error %}<br>{{b_error}}{% endif %}</li>
           <li>c = {{c}}{% if c_error %}<br>{{c_error}}{% endif %}</li>
         <ul> 
-        {% if not has_error %}
-          <br>Дискриминант: {{d}}<br>{{description}} {% if x1 and not x2 %}x1 = x2 = {{x1}}{% endif %}
-{% if x1 and x2 %}x1 = {{x1}}, x2 = {{x2}}{% endif %}{% endif %}
+{% if not has_error %}<br>Дискриминант: {{d}}<br>{{description}}{% if x1 and not x2 %} x1 = x2 = {{x1}}{% endif %}{% if x1 and x2 %} x1 = {{x1}}, x2 = {{x2}}{% endif %}{% endif %}
       </div>
       <div id="plot"> </div>
     </div>
