--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -9,20 +9,20 @@
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <title>Student details</title>
-
+    <title>Main</title>
+    
+    {% load staticfiles %}
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <!-- Bootstrap theme -->
     <!-- <link href="../static/css/bootstrap-theme.css" rel="stylesheet"> -->
 
     <!-- Custom styles for this template -->
-    <!-- <link href="../static/css/theme.css" rel="stylesheet"> -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
+    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -47,9 +47,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-            <li  class="active"><a href="student_list.html">Students</a></li>
+            <li><a href="{% url 'main' %}">Main</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
+            <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </div>
       </div>
@@ -61,7 +61,7 @@
         <div class="row">
           <div class="col-sm-6">
             <h1 class="course">Persianova Olena</h1>
-            <img src="../static/images/darka.jpg"  alt="Daria Mykhalevych" style="width:90px;height:120px;">
+            <img src="{% static 'images/darka.jpg' %}"  alt="Daria Mykhalevych" style="width:90px;height:120px;">
             <div class="bs-example" data-example-id="simple-table">
               <table class="table table-striped table table-bordered">
                 <caption>Student's card</caption>
@@ -168,13 +168,28 @@
       
       <!-- Site footer -->
       <footer class="footer">
-        <p>&copy; PyBursa 2015</p>
+      
       </footer>
       
+    </div>
+    
+    <!-- Site footer -->
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
+      <div class="col-sm-2 col-sm-offset-5">
+        <a class="navbar-brand" href="https://www.youtube.com/watch?v=KxmLNctBi10">&copy; PyBursa 2015</a>
+      </div>
+      <!--<div class="container">
+        <p class="navbar-text pull-left">&copy; PyBursa 2015</p>
+        <p class="navbar-text pull-right"> Butstrap 3
+          <a href="https://www.youtube.com/watch?v=KxmLNctBi10">tutorial</a>
+          and
+          <a href="https://www.youtube.com/user/CodersGuide">coder's guide</a>.-->
+        </p>
+      </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="{% static 'js/bootstrap.js' %}"></script>
   </body>
 </html>
