--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -47,7 +47,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'main' %}">Main</a></li>
+            <li><a href="{% url 'index' %}">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
             <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
