--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -7,11 +7,12 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../static/images/favicon.ico">
     <title>Students</title>
+    {% load staticfiles %}    
     <!-- Bootstrap core CSS -->
-     <link  rel="stylesheet" href="../static/css/bootstrap.css">
-     <link rel="stylesheet" href="../static/css/style.css" >
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}" />
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
   </head>
 
@@ -26,9 +27,9 @@
          </div>
            <div id="navbar" class="navbar-collapse collapse">
              <ul class="nav navbar-nav">
-               <li class="active"><a href="index.html">Main</a></li>
-               <li class="active"><a href="contact.html">Contacts</a></li>
-               <li class="active"><a href="student_list.html">Students</a></li>
+		    <li><a href="{% url 'home' %}">Main</a></li>
+                <li><a href="{% url 'contact' %}">Contacts</a></li>
+                <li><a href="{% url 'student_list' %}">Students</a></li>
              </ul>
            </div>
          </div>
@@ -54,7 +55,7 @@
 			<td>Skype</td>
 		</tr>
 		<tr>
-			<td><a href="student_detail.html">1</a></td>
+			<td><a href="{% url 'student_detail' %}">1</a></td>
 			<td>Сердюк</td>
 			<td>Михаил</td>
 			<td>Конная ул., дом 18, кв. 2</td>
@@ -92,5 +93,6 @@
   </table>
 </div>
  </div>
- <script src="../static/js/bootstrap.js"></script>
+
+ <script src="{% static 'js/bootstrap.js' %}"></script>
 </body></html>
