--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-		<li><a href="{% url 'home' %}">Main</a></li>
+		<li><a href="{% url 'index' %}">Main</a></li>
                 <li><a href="{% url 'contact' %}">Contacts</a></li>
                 <li><a href="{% url 'student_list' %}">Students</a></li>
             </ul>
