--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -47,13 +47,13 @@
 				        {% endif %}
 				    </ul>
 
-				    {% if square != '' %}
-				        <h4>Дискриминант: {{ square }}</h4>
-				        {% if square > 0 %}
+				    {% if disrcim != '' %}
+				        <h4>Дискриминант: {{ disrcim }}</h4>
+				        {% if disrcim > 0 %}
 				            <h5>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</h5>
-				        {% elif square == 0 %}
+				        {% elif disrcim == 0 %}
 				            <h5>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</h5>
-				        {% elif square < 0 %}
+				        {% elif disrcim < 0 %}
 				            <h5>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</h5>
 				        {% endif %}
 				    {% endif %}
