Fix link to student_details.

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -67,7 +67,7 @@
             </thead>
             <tbody>
               <tr>
-                <td><a href="student_detail.html">01</a></td>
+                <td><a href="{% url 'student_detail' %}">01</a></td>
                 <td>Popov</td>
                 <td>Anton</td>
                 <td>Kharkiv, Dostoevskogo str, 21</td>
