--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -20,7 +20,7 @@
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="{% static "js/ie-emulation-modes-warning.js"></script>
+    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
     <script src="{% static "js/bootstrap.js" %}"></script>
     <script src="{% static "js/user-scripts.js" %}"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -40,9 +40,9 @@
         <h3 class="text-muted">Pybursa</h3>
         <nav>
           <ul class="nav nav-justified">
-            <li><a href="/">Main</a></li>
-            <li><a href="/contact/">Contacts</a></li>
-            <li><a href="/student_list/">Students</a></li>
+            <li><a href="{% url 'index' %}">Main</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
+            <li><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </nav>
       </div>
@@ -160,9 +160,5 @@
       </footer>
 
     </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
