--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,9 +40,9 @@
         <h3 class="text-muted">Pybursa</h3>
         <nav>
           <ul class="nav nav-justified">
-            <li><a href="/">Main</a></li>
+            <li><a href="{% url 'index' %}">Main</a></li>
             <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li class=><a href="/student_list/">Students</a></li>
+            <li class=><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </nav>
       </div>
