--- a/templates/index.html
+++ b/templates/index.html
@@ -39,9 +39,9 @@
         <h3 class="text-muted">Pybursa</h3>
         <nav>
           <ul class="nav nav-justified">
-            <li class="active"><a href="/">Main</a></li>
-            <li><a href="/contact/">Contacts</a></li>
-            <li><a href="/student_list/">Students</a></li>
+            <li class="active"><a href="{% url 'index' %}">Main</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
+            <li><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </nav>
       </div>
