KZ32 minor fixes; at2

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -120,7 +120,7 @@
                 <td>
                   99.5
                 </td>
-              </tr>
+              </tr> <!--
               <tr class="success">
                 <td>
                   Package
@@ -128,7 +128,7 @@
                 <td>
                   Standard
                 </td>
-              </tr>
+              </tr> -->
               <tr class="success">
                 <td>
                   Birth Date
@@ -147,10 +147,10 @@
               </tr>
               <tr class="success">
                 <td>
-                  Post
+                  E-mail
                 </td>
                 <td>
-                  61000
+                  leshiy_222@gmail.com
                 </td>
               </tr>
               <tr class="success">
