KZ32 minor fixes; at3

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -12,7 +12,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="{% static 'images/Other-python.ico">
+  <link rel="icon" href="{% static 'images/Other-python.ico' %}">
   <title>PyBursa: Main page</title>
   <!-- Bootstrap core CSS -->
   <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
@@ -59,15 +59,6 @@
         <div class="col-md-8">
           <h2>Lykhomanov Ihor</h2><img alt="Student's photo" src="{% static 'images/student.jpg' %}" class="img-circle" />
         </div>
-        <!-- <div class="col-xs-6 col-md-4">
-          <ul class="nav nav-pills nav-stacked some_side_menu">
-            <li>О Python (оригинальный сайт)</li>
-            <li>Организация</li>
-            <li>
-              <p>Программа</li>
-            <li>Тренеры</li>
-          </ul>
-        </div> -->
       </div>
       <div class="row">
         <div class="col-sd-8" id="osebe">
@@ -120,15 +111,7 @@
                 <td>
                   99.5
                 </td>
-              </tr> <!--
-              <tr class="success">
-                <td>
-                  Package
-                </td>
-                <td>
-                  Standard
-                </td>
-              </tr> -->
+              </tr>
               <tr class="success">
                 <td>
                   Birth Date
@@ -147,10 +130,17 @@
               </tr>
               <tr class="success">
                 <td>
-                  E-mail
+                  Email
                 </td>
                 <td>
                   leshiy_222@gmail.com
+                </td>
+              <tr class="success">
+                <td>
+                  Phone
+                </td>
+                <td>
+                  08005552233
                 </td>
               </tr>
               <tr class="success">
