--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -12,7 +12,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="{% static 'images/Other-python.ico">
+  <link rel="icon" href="{% static 'images/Other-python.ico' %}">
   <title>PyBursa: Main page</title>
   <!-- Bootstrap core CSS -->
   <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
