KZ32 minor fixes; at4

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -57,7 +57,8 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-8">
-          <h2>Lykhomanov Ihor</h2><img alt="Student's photo" src="{% static 'images/student.jpg' %}" class="img-circle" />
+          <h2>Lykhomanov Ihor</h2>
+          <img alt="Student's photo" src="{% static 'images/student.jpg' %}" class="img-circle" />
         </div>
       </div>
       <div class="row">
@@ -73,82 +74,57 @@
           <table id="scard" class="table table-bordered table-hover table-condensed">
             <tbody>
               <tr class="success">
-                <td>
-                  Surname
-                </td>
+                <td>Surname</td>
                 <td>
                   Lykhomanov
                 </td>
               </tr>
               <tr class="success">
-                <td>
-                  Name
-                </td>
+                <td>Name</td>
                 <td>
                   Ihor
                 </td>
               </tr>
               <tr class="success">
-                <td>
-                  Patronymic
-                </td>
+                <td>Patronymic</td>
                 <td>
                   Alekseevich
                 </td>
               </tr>
               <tr class="success">
+                <td>Birth Date</td>
                 <td>
-                  Rating
-                </td>
-                <td>
-                  50
+                  1983, 12 Sep
                 </td>
               </tr>
               <tr class="success">
-                <td>
-                  Average grade
-                </td>
-                <td>
-                  99.5
-                </td>
-              </tr>
-              <tr class="success">
-                <td>
-                  Birth Date
-                </td>
-                <td>
-                  11/02/2001
-                </td>
-              </tr>
-              <tr class="success">
-                <td>
-                  Address
-                </td>
+                <td>Address</td>
                 <td>
                   Украина, г.Харьков, ул. Кирова, д. 6, кв. 10
                 </td>
               </tr>
               <tr class="success">
-                <td>
-                  Email
-                </td>
+                <td>E-mail</td>
                 <td>
                   leshiy_222@gmail.com
                 </td>
+              </tr>
               <tr class="success">
+                <td>Skype</td>
                 <td>
-                  Phone
-                </td>
-                <td>
-                  08005552233
+                  Leshiy
                 </td>
               </tr>
               <tr class="success">
+                <td>Average Grade</td>
                 <td>
-                  Skype
+                  50
                 </td>
+              </tr>
+              <tr class="success">
+                <td>Rating</td>
                 <td>
-                  Leshiy
+                  40
                 </td>
               </tr>
             </tbody>
